--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
                                         <p class="text-sm text-gray-600">การออกนอกเขตเมืองโดยไม่ได้รับอนุญาต</p>
                                     </div>
                                     <div class="text-right text-sm">
-                                        <div class="text-purple-600 font-bold">X4 ของคดี</div>
+                                        <div class="text-purple-600 font-bold">X2 ของคดี</div>
                                         <div class="text-orange-600">- นาที</div>
                                     </div>
                                 </div>
@@ -1164,7 +1164,7 @@
             mask: { name: 'ใส่หน้ากาก หรือปิดบังใบหน้า', desc: 'การปิดบังใบหน้าในที่สาธารณะ', fine: 3000, jail: 5 },
             assault: { name: 'เจตนาทำร้ายร่างกาย - ประชาชน', desc: 'การทำร้ายร่างกายผู้อื่นโดยเจตนา', fine: 20000, jail: 10 },
             kidnap: { name: 'ลักพาตัว', desc: 'การจับตัวผู้อื่นไปโดยไม่ยินยอม', fine: 10000, jail: 10 },
-            outOfCity: { name: 'ออกนอกเมือง', desc: 'การออกนอกเขตเมืองโดยไม่ได้รับอนุญาต', fine: 0, jail: 0, special: 'X4 ของคดี' },
+            outOfCity: { name: 'ออกนอกเมือง', desc: 'การออกนอกเขตเมืองโดยไม่ได้รับอนุญาต', fine: 0, jail: 0, special: 'X2 ของคดี' },
             conspiracy: { name: 'สมรู้ร่วมคิด/ร่วมกันกระทำความผิด', desc: 'การร่วมมือกันกระทำความผิด', fine: 0, jail: 0, special: 'ตามคดีหลัก' },
             showWeapon: { name: 'แสดงอาวุธในที่สาธารณะ', desc: 'การแสดงอาวุธในที่สาธารณะ', fine: 5000, jail: 0 },
             riskArea: { name: 'พื้นที่สุ่มเสี่ยง', desc: 'การเข้าไปในพื้นที่เสี่ยงอันตราย', fine: 2000, jail: 3 },
@@ -1465,15 +1465,15 @@
             if (hasMountain && hasOutOfCity && hasDarkCar) {
                 multiplier = 10; // All three = 10x
             } else if (hasMountain && hasOutOfCity) {
-                multiplier = 8;  // Mountain + Out of city = 8x
+                multiplier = 6;  // Mountain + Out of city = 6x (4x + 2x)
             } else if (hasMountain && hasDarkCar) {
                 multiplier = 8;  // Mountain + Dark car = 8x
             } else if (hasOutOfCity && hasDarkCar) {
-                multiplier = 6;  // Out of city + Dark car = 6x
+                multiplier = 6;  // Out of city + Dark car = 6x (2x + 4x)
             } else if (hasMountain) {
                 multiplier = 4;  // Mountain only = 4x
             } else if (hasOutOfCity) {
-                multiplier = 4;  // Out of city only = 4x
+                multiplier = 2;  // Out of city only = 2x
             } else if (hasDarkCar) {
                 multiplier = 4;  // Dark car only = 4x
             }
@@ -1529,11 +1529,11 @@
             if (hasMountain && hasOutOfCity && hasDarkCar) {
                 multiplier = 10; // ขึ้นเขา + ออกนอกเมือง + รถทึบ = 10x
             } else if (hasMountain && hasOutOfCity) {
-                multiplier = 8;  // ขึ้นเขา + ออกนอกเมือง = 8x
+                multiplier = 6;  // ขึ้นเขา + ออกนอกเมือง = 6x (4x + 2x)
             } else if (hasMountain && hasDarkCar) {
                 multiplier = 8;  // ขึ้นเขา + รถทึบ = 8x
             } else if (hasOutOfCity && hasDarkCar) {
-                multiplier = 6;  // ออกนอกเมือง + รถทึบ = 6x
+                multiplier = 6;  // ออกนอกเมือง + รถทึบ = 6x (2x + 4x)
             } else if (hasMountain) {
                 multiplier = 4;  // ขึ้นเขา = 4x
             } else if (hasOutOfCity) {
@@ -1744,5 +1744,5 @@
             });
         });
     </script>
-<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9876973a90d14f52',t:'MTc1OTI2NTQwNy4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9879c253678f893d',t:'MTc1OTI5ODYzMC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
